--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
 	font-family: monospace;
 	margin: 0;
 }
+
 body {
 	background-color: #0b0117;
 	text-align: center;
@@ -12,18 +13,32 @@ body {
 	flex-direction: column;
 	padding: 16px;
 }
+p {
+	padding: 8px;
+}
 img {
-	width: 50svw;
+	width: 40svw;
+
 	background-color: aquamarine;
+}
+#text-div {
+	text-align: left;
 }
 
 #text-div,
-#link-div {
+#link-div,
+#input-div {
 	min-height: 2px;
 	margin-top: 4px;
 	background-color: #29043c;
 	padding: 16px 0;
-	width: 50svw;
+	width: 80svw;
+}
+#img-div {
+	display: flex;
+	gap: 0.2svw;
+	width: 100%;
+	justify-content: center;
 }
 
 a,
